# breakout-game

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
src/: CMakeLists.txt  main.cc
src/ecs/: CMakeLists.txt  ecs.hpp  entity.hpp
src/game/: CMakeLists.txt  collision_system.cc  collision_system.hpp  components.hpp  constants.hpp  control_system.cc  control_system.hpp  dynamics_system.cc  dynamics_system.hpp  game.hpp  game_manager.cc  game_manager.hpp  render_system.cc  render_system.hpp  rule_system.cc  rule_system.hpp  system.hpp  world.cc  world.hpp
test/unit/: CMakeLists.txt  test_collision_system.cc  test_ecs.cc  test_entity.cc
